[FIX] Community 이미지 기능 개선 및 엔드포인트 컨벤션 통일 (#105)
* [FIX] Community Default Image 적용 및 awsS3Service 메소드 일원화

* [FIX] Community 등록시 이미지 처리 로직 수정 및 엔드포인트 컨벤션 통일